--- a/components/about.css
+++ b/components/about.css
@@ -97,9 +97,9 @@ video{
     text-align: center;
 }
 
-.content1 p{
-    text-align: center;
-}
+/* .content1 p{
+    text-align: left;
+} */
 
 .download-btn{
     padding: 6px 6px;
@@ -267,6 +267,122 @@ a{
     .content2{
         margin-bottom: 0vh;
         height: 30vh;
+    }
+
+}
+
+
+
+@media screen and (min-width: 431px) and (max-width: 770px) { 
+
+    .img-box1 video{
+        display: none;
+    }
+
+    .img-box1 img{
+        display: block;
+        filter: grayscale(1);
+        object-fit: cover;
+    }
+
+    .img-box1 img:hover{
+        filter: grayscale(0);
+    }
+
+    .about-page{
+        height: 100vw;
+        flex-direction: column;
+    }
+
+    .content1,.content2,.content3{
+        width: 100vw;
+        margin-top: 0;
+    }
+
+    .images1{
+        width: 100vw;
+        flex-direction: column;
+    }
+    
+    .about{
+        width: 100vw;
+    }
+
+    .about h1{
+        margin-top: 2vh;
+         font-size: 14vw;
+         text-align: center;
+    }
+
+    .about p{
+              margin-top: 2vh;
+              font-size: 3.5vw;
+              text-align: center;
+    }
+
+    .images1{
+        align-items: center;
+        justify-content: center;
+    }
+
+    .img-box1{
+        
+        margin-top: 1vh;
+        height: 50vh;
+        width: 70vw;
+    }
+
+    .content1{
+        width: 100vw;
+    }
+
+    .content1 h3{
+        font-size: 10vw;
+    }
+
+    .content1 p{
+        font-size: 4vw;
+    }
+
+    .download-btn{
+        margin-top: 1vh;
+        padding: 16px 38px;
+        font-size: 20px;
+    }
+
+    .content2{
+        margin-top: 45vh;
+    }
+
+    .content2 h3{
+        font-size: 11vw;
+    }
+
+    .content3 h3{
+        font-size: 11vw;
+    }
+
+    .section3{
+        display: none;
+    }
+
+    .content2{
+        margin-bottom: 0vh;
+        height: 30vh;
+        margin-top: 35vh;
+    }
+
+        button {
+            padding: 17px 46px;
+            border-radius: 31px;
+            border: 1px solid whitesmoke;
+            margin: 3px;
+            background-color: transparent;
+            color: aliceblue;
+    }
+
+    .content3{
+        height: 42vh;
     }
 
 }
