--- a/media.css
+++ b/media.css
@@ -1,234 +1,43 @@
 
-
-@media (max-width:431px ){
-   
-    body{
-        height: 100%;
-        width: 100vw;
+@media screen and (min-width: 360px) and (max-width: 770px) { 
+    
+    #intro #hey{
+        font-size: 17vw;
+        display: block;
     }
 
-
-    .full-nav{
-        width: 100%;
-        right: -100%;  
+    #menu{
+        display: none;
     }
 
-    .full-nav h4{
-        font-size: 14vw;
-        margin-left: 20px;
+    #intro #im{
+       font-size:12vw; 
     }
 
-    #cross{
-        font-size: 60px;
-    }
-
-    .page1{
-        height: 70vh;
+    #intro #dev{
+        font-size: 12vw;
     }
 
     .info{
-        margin-top: 13vh;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-
-    #intro{
-        display: none;
-    }
-
-
-    .msg {
-       display: none;
-    }
-
-    nav i{
-        font-size: 5vw;
-        padding-right: 60px;
-    }
-
-
-    .quote-page{
-        display: none;
-    }
-
-    .page2{
-        display: none;
-    }
-
-    .page3{
-        display:none;
-    }
-
-    #cursor{
-        display: none;
-    }
- 
-    #para2{
-        display: block;
-        margin-top: 4vh;
-        width: 90%;
-        text-align: center;
-        position: absolute;
-    }
-
-    .page4{
-        height: 70vh;
-        width: 100%;
-    }
-
-    .page4 h1{
-        font-size: 9vw;
-    }
-
-    .swiper,.swiper-slide{
-        height: 80vh;
-    }
-
-    .swiper-slide img{
-        height: 40vh;
+        display: grid;
+        grid-template-columns: auto auto ;
     }
     
-    #next,#prev{
-        display: none;
-    }
-
-    footer {
-        height: 50vh;
-    }
-    
-    .connect{
-        height: 10vh;
-    }
-
-    #scroll-down{
-       display: none;
-    }
-    
-}
-
-
-@media (max-width:415px) {
     .page1{
-        height: 70vh;
-    }
-
-    .info{
-        margin-top: 13vh;
-        flex-direction: column;
-        flex-wrap: wrap;
-    }
-
-    #intro{
-        display: none;
-    }
-
-
-    .msg {
-       display: none;
-    }
-
-    nav i{
-        font-size: 5vw;
-        padding-right: 60px;
-    }
-
-
-    .quote-page{
-        display: none;
-    }
-
-    .page2{
-        display: none;
-    }
-
-    .page3{
-        display:none;
-    }
-
-    #cursor{
-        display: none;
-    }
- 
-    #para2{
-        display: block;
-        margin-top: 4vh;
-        width: 90%;
-        text-align: center;
-        position: absolute;
-    }
-
-    .page4{
-        height: 70vh;
-        width: 100%;
-    }
-
-    .page4 h1{
-        font-size: 9vw;
-    }
-
-    .swiper,.swiper-slide{
-        height: 80vh;
-    }
-
-    .swiper-slide img{
-        height: 40vh;
-    }
-    
-    #next,#prev{
-        display: none;
-    }
-
-    footer {
-        margin-top: 15vh;
-        height: 50vh;
-    }
-    
-    
-    .connect{
-        height: 10vh;
-    }
-    
-    
-}
-
-
-@media (max-width:360px) {
-
-    .page1{
-        height: 90vh;
-    }
-
-    .swiper-slide{
         height: 100vh;
     }
 
-    nav i{
-        padding-right: 40px;
-        font-size: 6.5vw;
+    .page2{
+        height: 105vh;
+        border-top: none;
     }
 
-    #site,#github{
-        margin-bottom: 4vh;
+    .page2 h1{
+        font-size: 16vw;
     }
-
-    footer{
-        margin-top: 15vh;
-    }
-
-}
-
-
-@media screen and (min-width: 431px) and (max-width: 770px) { 
-    .info{
-        flex-direction: column;
-    }
-
+    
     .msg{
         display: none;
-    }
-
-    #intro h1{
-        font-size: 12vw;
     }
 
     nav i{
@@ -237,14 +46,34 @@
 
     .full-nav{
         width: 50%;
+        right: -50%;
     }
 
     .quote-page{
-        font-size: 5vw;
+       display: none;
     }
 
     .page3 h1{
         font-size: 60vw;
+    }
+
+    .cards{
+        display: grid;
+        grid-template-columns: auto auto auto ;
+        gap: 20px;
+        left: 0;
+    }
+
+    .card p{
+        text-align:left;
+        font-size: 12px;
+    }
+  
+    .card:nth-child(1),.card:nth-child(2),.card:nth-child(3),
+    .card:nth-child(4),.card:nth-child(5),.card:nth-child(6){
+        left: 0;
+        width: 28vw;
+        height: 28vh;
     }
 
     .skill{
@@ -252,4 +81,150 @@
         width: 12vw;
     }
 
+    .card button{
+        padding: 6px 20px;
+    }
+
+    .page3 {
+        display: none;
+    }
+
+    #scroll-down {
+        display: none;
+    }
+
+    .full-nav{
+        display: none;
+    }
+    
+    #cursor{
+        display: none;
+    }
+       
+    .swiper-slide img{
+        height: 55vh;
+        width: 75vw;
+        filter: none;
+        border-radius: 5px;
+    }
+
+    .swiper-slide h1{
+        font-size: 11vw;
+        margin-bottom: 6vh;
+        text-align: center;
+    }
+
+    .swiper-slide{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    #next,#prev{
+        position: absolute;
+        top: 45%;
+        opacity: 0.2;
+    }
+}
+
+
+@media (max-width:499px) {
+
+    
+    #intro #hey{
+        font-size: 17vw;
+        display: block;
+    }
+
+    #intro #im{
+       font-size:13vw; 
+    }
+
+    #intro #dev{
+        font-size: 16vw;
+    }
+
+    .schooling,.college{
+        display: none;
+    }
+
+    .info{
+        grid-template-columns: auto;
+    }
+
+    .cards{
+       grid-template-columns: auto auto;
+    }
+
+    .card:nth-child(1),.card:nth-child(2),.card:nth-child(3),
+    .card:nth-child(4),.card:nth-child(5),.card:nth-child(6){
+        left: 0;
+        width: 40vw;
+        height: 25vh;
+    }
+
+    #skill-logo{
+        font-size: 18vw;
+    }
+
+    .card button{
+        padding: 4px 13px;
+    }
+
+    .card p{
+        font-size: 10px;
+    }
+  
+    #scroll-down {
+        display: block;
+        font-size: 6vw;
+        opacity: 0.2;
+        left: 48%;
+        bottom: 7%;
+    }
+
+    #next,#prev{
+        position: absolute;
+        top: 38%;
+    }  
+
+    #next{
+        right: 0%;
+    }
+
+    #prev{
+       left: 0%;
+    }
+
+    .connect{
+        height: 14vh;
+    }
+}
+
+@media (max-width:361px) {
+
+    #next,#prev{
+        position: absolute;
+        top: 40%;
+    }  
+
+    #next{
+        right: 2%;
+    }
+
+    #prev{
+       left: 2%;
+    }
+
+    .card button{
+        padding: 2px 10px;
+    }
+
+    .connect{
+        height: 13vh;
+    }
+
+    footer{
+        height: 68vh;
+    }
 }
