--- a/components/about.css
+++ b/components/about.css
@@ -97,9 +97,9 @@ video{
     text-align: center;
 }
 
-/* .content1 p{
-    text-align: left;
-} */
+.content1 p{
+    text-align: center;
+}
 
 .download-btn{
     padding: 6px 6px;
@@ -194,7 +194,7 @@ a{
     }
 
     .about-page{
-        height: 100vw;
+        height: 100vh;
         flex-direction: column;
     }
 
@@ -213,14 +213,14 @@ a{
 
     .about h1{
         margin-top: 2vh;
-         font-size: 14vw;
-         text-align: center;
+        font-size: 14vw;
+        text-align: center;
     }
 
     .about p{
-              margin-top: 2vh;
-              font-size: 3.5vw;
-              text-align: center;
+        margin-top: 2vh;
+        font-size: 3.5vw;
+        text-align: center;
     }
 
     .images1{
@@ -229,10 +229,13 @@ a{
     }
 
     .img-box1{
-        
         margin-top: 1vh;
         height: 40vh;
         width: 90vw;
+    }
+
+    .section1{
+        width: 100vw;
     }
 
     .content1{
@@ -290,7 +293,6 @@ a{
     }
 
     .about-page{
-        height: 100vw;
         flex-direction: column;
     }
 
@@ -310,14 +312,14 @@ a{
 
     .about h1{
         margin-top: 2vh;
-         font-size: 14vw;
-         text-align: center;
+        font-size: 14vw;
+        text-align: center;
     }
 
     .about p{
-              margin-top: 2vh;
-              font-size: 3.5vw;
-              text-align: center;
+        margin-top: 2vh;
+        font-size: 3.5vw;
+        text-align: center;
     }
 
     .images1{
@@ -326,7 +328,6 @@ a{
     }
 
     .img-box1{
-        
         margin-top: 1vh;
         height: 50vh;
         width: 70vw;
@@ -334,6 +335,7 @@ a{
 
     .content1{
         width: 100vw;
+        
     }
 
     .content1 h3{
@@ -350,10 +352,7 @@ a{
         font-size: 20px;
     }
 
-    .content2{
-        margin-top: 45vh;
-    }
-
+    
     .content2 h3{
         font-size: 11vw;
     }
@@ -368,21 +367,29 @@ a{
 
     .content2{
         margin-bottom: 0vh;
-        height: 30vh;
-        margin-top: 35vh;
+        height: 50vh;
+        margin-top: 55vh;
     }
 
-        button {
-            padding: 17px 46px;
-            border-radius: 31px;
-            border: 1px solid whitesmoke;
-            margin: 3px;
-            background-color: transparent;
-            color: aliceblue;
+    button {
+        padding: 17px 46px;
+        border-radius: 31px;
+        border: 1px solid whitesmoke;
+        margin: 3px;
+        background-color: transparent;
+        color: aliceblue;
     }
 
     .content3{
-        height: 42vh;
+        height: 60vh;
     }
 
+}
+
+
+@media (max-width:1286px) and (min-width:1000px) {
+    .section1 p{
+        font-size: 1.4vw;
+    }
+    
 }
