--- a/components/contact.css
+++ b/components/contact.css
@@ -15,9 +15,8 @@ html,body{
     display: flex;
     justify-content: center;
     align-items: center;
-   background-color: white;
-   color: aliceblue;
-    
+    background-color: white;
+    color: aliceblue;
 }
 
 label{
@@ -30,7 +29,7 @@ label{
 form{
     border-radius: 18px;
     height: 72vh;
-    width: 25vw;
+    width: 30vw;
     font-size: 17px;
     color: black;
     position: relative;
@@ -106,7 +105,7 @@ button:hover{
 
 .input-group span{
     position: absolute;
-    right: 25px;
+    right: 92px;
     font-size: 14px;
     color: red;
     padding-top: 18px;
@@ -122,10 +121,11 @@ button:hover{
 
 #message-error{
     position: absolute;
-    right: 28px;
+    right: 92px;
     font-size: 14px;
     color: red;
-    padding-top: 32px;
+    padding-top: 40px;
+    padding-right: 0;
 }
 
 #correct{
@@ -136,4 +136,19 @@ button:hover{
 #incorrect{
     padding-right: 2px;
     color: red;
+}
+
+
+@media (max-width:435px) {
+    .input-group span{
+        position: absolute;
+        right:-100px;
+    }
+
+    #message-error{
+        position: absolute;
+        right: -100px;
+        /* padding-bottom: 100px; */
+        padding-right: 0;
+    }
 }
